<resources>
    <string name="app_name">TrailCompass</string>
    <string name="channel_name">Main message channel</string>
    <string name="channel_description">All messages related to TrailCompass go through this one</string>
    <string name="version_unknown" translatable="false">v#.#.#.#</string>
    <string name="version_known_prefix" translatable="false">v%s</string>
    <string name="select_gamemode">Select a gamemode!</string>
    <string name="fragment_status_unknown" translatable="false">❔</string>
    <string name="fragment_status_ok" translatable="false">✅</string>
    <string name="fragment_status_dev" translatable="false">🛠⚠</string>
    <string name="fragment_status_incompatible" translatable="false">‼</string>
    <string name="nospeak">No description provided</string>
    <string name="acsbl_btn_switch_to_map">Switch to map</string>
    <string name="acsbl_btn_switch_to_questions">Switch to questions</string>
    <string name="acsbl_btn_switch_to_chat">Switch to chat</string>
    <string name="acsbl_trailcompass_logo">TrailCompass logo</string>
    <string name="acsbl_btn_switch_to_settings">Switch to Settings</string>
    <string name="login_succes">Logged in as %s, downloading map updates</string>
    <string name="login_wrong_password">Unable to login, check username and password!</string>
    <string name="login_wrong_version">Server is on a different version!</string>
    <string name="login_unable_to_connect">Unable to connect to the server!</string>
    <string name="login_started">Logging in as %s</string>
    <string name="login_checking_map_hash">Checking map hash!</string>
    <string name="login_map_update_needed">Map update needed!</string>
    <string name="login_map_download_progress">Map download {0}%</string>
    <string name="generic_loading">Loading…</string>
    <string name="acsbl_btn_reload">Reload all the meta on this page</string>
    <string name="await_title_setup">Awaiting Start</string>
    <string name="await_subtitle_setup">Waiting for an admin to start this game!</string>
    <string name="await_admin_current_hider">Current hider: %s</string>
    <string name="await_admin_title">Please select the hider and start the game</string>
    <string name="await_start_game">Start game</string>
    <string name="await_switch_hider">Switch hider</string>
    <string name="await_setup">Setup</string>
    <string name="await_title_waiting">Waiting for start…</string>
    <string name="await_subtitle_waiting">The game will start in \n %s</string>
    <string name="debug_notif_label" translatable="false">Press to see a notification</string>
    <string name="debug_notif_button" translatable="false">Send notification</string>
    <string name="debug_main_title" translatable="false">Debug mode active!</string>
    <string name="debug_main_map" translatable="false">Map</string>
    <string name="debug_main_qr" translatable="false">QR</string>
    <string name="debug_main_notif" translatable="false">Notif</string>
    <string name="await_btn_reload">Reload</string>
    <string name="debug_fragment_enter" translatable="false">Enter Debug Mode</string>
    <string name="hideandseek_fragment_url">Server URL</string>
    <string name="hideandseek_fragment_username">Username</string>
    <string name="hideandseek_fragment_password">Password</string>
    <string name="hideandseek_fragment_btn_login">Login</string>
</resources>