<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.TrailCompass"
    tools:context=".hideandseek.ui.MainmenuHideandseekLogin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/design_shadow"
        app:cardCornerRadius="8sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/hideandseek_fragment_server_url"
                android:layout_width="0dp"
                android:layout_height="48sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hideandseek_fragment_url"
                android:importantForAutofill="no"
                android:inputType="textUri"
                app:layout_constraintBottom_toTopOf="@+id/hideandseek_fragment_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <EditText
                android:id="@+id/hideandseek_fragment_username"
                android:layout_width="0dp"
                android:layout_height="48sp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hideandseek_fragment_username"
                android:inputType="text"
                android:autofillHints="username"
                app:layout_constraintBottom_toTopOf="@+id/hideandseek_fragment_password"
                app:layout_constraintEnd_toEndOf="@+id/hideandseek_fragment_server_url"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/hideandseek_fragment_server_url"
                app:layout_constraintTop_toBottomOf="@+id/hideandseek_fragment_server_url" />

            <EditText
                android:id="@+id/hideandseek_fragment_password"
                android:layout_width="0dp"
                android:layout_height="48sp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hideandseek_fragment_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                app:layout_constraintBottom_toTopOf="@id/hideandseek_fragment_login"
                app:layout_constraintEnd_toEndOf="@+id/hideandseek_fragment_username"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/hideandseek_fragment_username"
                app:layout_constraintTop_toBottomOf="@+id/hideandseek_fragment_username" />

            <Button
                android:id="@+id/hideandseek_fragment_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/hideandseek_fragment_btn_login"
                android:textColor="@color/design_fg"
                app:cornerRadius="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/hideandseek_fragment_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hideandseek_fragment_status"
                app:layout_constraintTop_toBottomOf="@+id/hideandseek_fragment_password" />

            <TextView
                android:id="@+id/hideandseek_fragment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/fragment_status_unknown"
                app:layout_constraintBottom_toBottomOf="@+id/hideandseek_fragment_login"
                app:layout_constraintEnd_toStartOf="@+id/hideandseek_fragment_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/hideandseek_fragment_password"
                app:layout_constraintTop_toTopOf="@+id/hideandseek_fragment_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>